--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,10 +3,10 @@ $font-color-primary: #f7f7f7;
 // ************ HERO SECTION ************** //
 .hero-container {
   // To compensate for the header
-  height: 60rem;
+  height: 55rem;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../assets/img/background.jpg) no-repeat center;
   background-size: cover;
-  margin-bottom: 15rem;
+  margin-bottom: 12rem;
 }
 
 .hero {
